[project]
name = "droit-europeen-mcp"
version = "0.1.0"
description = "Serveur MCP pour le droit européen via EUR-Lex et CELLAR (SOAP, SPARQL, REST)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alexandre Karassouloff" }]
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27.0",
    "lxml>=5.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
droit-europeen-mcp = "droit_europeen_MCP:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["droit_europeen_MCP", "api_rest", "api_sparql", "api_soap"]
